exports[`common/component/module/cornerstone should render correctly 1`] = `
<span
  className="m-cornerstone cornerstone"
  itemScope={true}
  itemType="https://schema.org/ItemList"
  role="list">
  <li
    className="m-cornerstone__item--center">
    <h3
      className="is-centered c-type--h3 m-cornerstone__headline">
      professionalExperience
    </h3>
  </li>
  <li
    className="m-cornerstone__item--left"
    itemProp="itemListElement"
    itemScope={true}
    itemType="https://schema.org/EmployeeRole">
    <div
      className="m-cornerstone__description">
      <div
        className="m-cornerstone__description-content">
        <h4
          className="is-centered c-type--h4 m-cornerstone__headline"
          itemProp="roleName">
          headline
        </h4>
        <p
          className="c-type--p m-cornerstone__company">
          <strong>
            lead
          </strong>
        </p>
        <p
          className="c-type--p m-cornerstone__time"
          itemProp="description">
          (
          <time
            className="c-time"
            itemProp="startDate">
            20161212
          </time>
           - 
          <time
            className="c-time">
            20161224
          </time>
          )
        </p>
        <p
          className="c-type--p m-cornerstone__text"
          dangerouslySetInnerHTML={
            Object {
              "__html": "description1",
            }
          }
          itemProp="description" />
        <p
          className="c-type--p m-cornerstone__text"
          dangerouslySetInnerHTML={
            Object {
              "__html": "description2",
            }
          }
          itemProp="description" />
      </div>
    </div>
    <div
      className="m-cornerstone__bubble" />
  </li>
  <li
    className="m-cornerstone__item--center">
    <h3
      className="is-centered c-type--h3 m-cornerstone__headline">
      academicEducation
    </h3>
  </li>
  <li
    className="m-cornerstone__item--left"
    itemProp="itemListElement"
    itemScope={true}
    itemType="https://schema.org/EducationEvent">
    <div
      className="m-cornerstone__description">
      <div
        className="m-cornerstone__description-content">
        <h4
          className="is-centered c-type--h4 m-cornerstone__headline"
          itemProp="name">
          headline
        </h4>
        <p
          className="c-type--p m-cornerstone__company"
          itemProp="alternateName">
          <strong>
            lead
          </strong>
        </p>
        <p
          className="c-type--p m-cornerstone__time">
          (
          <time
            className="c-time"
            itemProp="startDate">
            20161212
          </time>
           - 
          <time
            className="c-time"
            itemProp="endDate">
            20161224
          </time>
          )
        </p>
        <p
          className="c-type--p m-cornerstone__text"
          dangerouslySetInnerHTML={
            Object {
              "__html": "description1",
            }
          }
          itemProp="description" />
        <p
          className="c-type--p m-cornerstone__text"
          dangerouslySetInnerHTML={
            Object {
              "__html": "description2",
            }
          }
          itemProp="description" />
      </div>
    </div>
    <div
      className="m-cornerstone__bubble" />
    <div
      hidden={true}
      itemProp="location"
      itemScope={true}
      itemType="https://schema.org/Place">
      <meta
        content={undefined}
        itemProp="name" />
      <div
        itemProp="address"
        itemScope={true}
        itemType="http://schema.org/PostalAddress">
        <meta
          content={undefined}
          itemProp="streetAddress" />
        <meta
          content={undefined}
          itemProp="addressLocality" />
        <meta
          content={undefined}
          itemProp="sameAs" />
      </div>
    </div>
  </li>
  <li
    className="m-cornerstone__item--start">
    <div
      className="m-cornerstone__bubble c-font-icon--bookmark2" />
  </li>
  Module Cornerstone Children
</span>
`;

exports[`common/component/module/cornerstone should render no itemType if unset 1`] = `
<span
  className="m-cornerstone cornerstone"
  role="list">
  <li
    className="m-cornerstone__item--center">
    <h3
      className="is-centered c-type--h3 m-cornerstone__headline">
      professionalExperience
    </h3>
  </li>
  <li
    className="m-cornerstone__item--left"
    itemProp="itemListElement"
    itemScope={true}
    itemType="https://schema.org/EmployeeRole">
    <div
      className="m-cornerstone__description">
      <div
        className="m-cornerstone__description-content">
        <h4
          className="is-centered c-type--h4 m-cornerstone__headline"
          itemProp="roleName">
          headline
        </h4>
        <p
          className="c-type--p m-cornerstone__company">
          <strong>
            lead
          </strong>
        </p>
        <p
          className="c-type--p m-cornerstone__time"
          itemProp="description">
          (
          <time
            className="c-time"
            itemProp="startDate">
            20161212
          </time>
           - 
          <time
            className="c-time">
            20161224
          </time>
          )
        </p>
        <p
          className="c-type--p m-cornerstone__text"
          dangerouslySetInnerHTML={
            Object {
              "__html": "description1",
            }
          }
          itemProp="description" />
        <p
          className="c-type--p m-cornerstone__text"
          dangerouslySetInnerHTML={
            Object {
              "__html": "description2",
            }
          }
          itemProp="description" />
      </div>
    </div>
    <div
      className="m-cornerstone__bubble" />
  </li>
  <li
    className="m-cornerstone__item--center">
    <h3
      className="is-centered c-type--h3 m-cornerstone__headline">
      academicEducation
    </h3>
  </li>
  <li
    className="m-cornerstone__item--left"
    itemProp="itemListElement"
    itemScope={true}
    itemType="https://schema.org/EducationEvent">
    <div
      className="m-cornerstone__description">
      <div
        className="m-cornerstone__description-content">
        <h4
          className="is-centered c-type--h4 m-cornerstone__headline"
          itemProp="name">
          headline
        </h4>
        <p
          className="c-type--p m-cornerstone__company"
          itemProp="alternateName">
          <strong>
            lead
          </strong>
        </p>
        <p
          className="c-type--p m-cornerstone__time">
          (
          <time
            className="c-time"
            itemProp="startDate">
            20161212
          </time>
           - 
          <time
            className="c-time"
            itemProp="endDate">
            20161224
          </time>
          )
        </p>
        <p
          className="c-type--p m-cornerstone__text"
          dangerouslySetInnerHTML={
            Object {
              "__html": "description1",
            }
          }
          itemProp="description" />
        <p
          className="c-type--p m-cornerstone__text"
          dangerouslySetInnerHTML={
            Object {
              "__html": "description2",
            }
          }
          itemProp="description" />
      </div>
    </div>
    <div
      className="m-cornerstone__bubble" />
    <div
      hidden={true}
      itemProp="location"
      itemScope={true}
      itemType="https://schema.org/Place">
      <meta
        content={undefined}
        itemProp="name" />
      <div
        itemProp="address"
        itemScope={true}
        itemType="http://schema.org/PostalAddress">
        <meta
          content={undefined}
          itemProp="streetAddress" />
        <meta
          content={undefined}
          itemProp="addressLocality" />
        <meta
          content={undefined}
          itemProp="sameAs" />
      </div>
    </div>
  </li>
  <li
    className="m-cornerstone__item--start">
    <div
      className="m-cornerstone__bubble c-font-icon--bookmark2" />
  </li>
  Module cornerstone children
</span>
`;

exports[`common/component/module/cornerstone should return null if no content is empty 1`] = `null`;
